--- a/app/src/main/res/layout/activity_main_course.xml
+++ b/app/src/main/res/layout/activity_main_course.xml
@@ -8,17 +8,19 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="430dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:textAlignment="center"
+        android:layout_gravity="center_horizontal"
         android:text="請選擇主餐"
         android:textSize="20sp" />
 
     <ListView
         android:id="@+id/listViewMainCourse"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:divider="@android:color/darker_gray"
         android:dividerHeight="1dp" />
 
